--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,7 @@
         <h2 id="question"></h2>
         <ul id="choices"></ul>
         </div>
-    <img class='vtex-ilust' src="C:\Users\eduardo.leite\Desktop\Questionário VTEX Pro\Assets\vtex-ilust.jpg" alt="Logo">
+    <img class='vtex-ilust' src="vtex-ilust.jpg" alt="Logo">
     
     <div class="home-button"> 
     <button onclick="window.location.href='index.html'">Home</button>
