--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <style>
         
         body {
@@ -20,6 +23,7 @@
             color:#fb3776;
             font-family: 'Roboto', sans-serif;
             text-align: center;
+            font-weight: 700;
 
         }
 
@@ -51,6 +55,7 @@
         li a:hover {
             background-color: rgb(5, 0, 0);
             color: rgb(252, 252, 252);
+            transform: scale(1.1);
         }
 
         img {
