--- a/quiz.html
+++ b/quiz.html
@@ -5,25 +5,32 @@
     <meta charset="utf-8">
     <title>Quiz</title>
     <link rel="stylesheet" href="quiz.css">
-    </style
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <img class='vtex-logo' src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-xaF4e65hIf9YtI9l56UUD70f3Gk130ywbJ6la2SjklsO1iCDUPB66PUV_rPTO1IslGQ&usqp=CAU" alt="Logo">
+    <div class="progress-bar">
+        <div class="progress" role="progressbar"></div>
+    </div>
+    <img class='vtex-logo'
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-xaF4e65hIf9YtI9l56UUD70f3Gk130ywbJ6la2SjklsO1iCDUPB66PUV_rPTO1IslGQ&usqp=CAU"
+        alt="Logo">
     <h1> VTEX Pro: Seleção de Serviços</h1>
     <div id="quiz">
         <h2 id="question"></h2>
         <ul id="choices"></ul>
-        </div>
-    <img class='vtex-ilust' src="vtex-ilust.jpg" alt="Logo">
-    
-    <div class="home-button"> 
-    <button onclick="window.location.href='index.html'">Home</button>
-    
+    </div>
+    <img class='vtex-ilust' src="C:\Users\eduardo.leite\Desktop\Questionário VTEX Pro\Assets\vtex-ilust.jpg" alt="Logo">
+
+    <div class="home-button">
+        <button onclick="window.location.href='index.html'">Home</button>
+    </div>
+
     <script src="quiz.js"></script>
 </body>
 
